fix(portal/Headlines): Correction de la double scrollbar

--- a/skins/mel_elastic/styles/less/style.less
+++ b/skins/mel_elastic/styles/less/style.less
@@ -4412,6 +4412,10 @@ a.rcmContactAddress {
             margin-bottom: 0;
         }
     }
+
+    .module_Headlines &{
+        overflow: unset;
+    }
 }
 
 .melv2-color {
